Return total number of articles in query request
